fix: breadcrumbs a11y (#996)
* fix: breadcrumbs a11y

* fix: requested changes

* fix: removed aria-current and extra spacing

--- a/src/components/HeaderBreadcrumbs/HeaderBreadcrumbs.scss
+++ b/src/components/HeaderBreadcrumbs/HeaderBreadcrumbs.scss
@@ -6,38 +6,40 @@ $block: '.#{$ns}header-breadcrumbs';
 #{$block} {
     z-index: 11;
 
+    &__list {
+        @include reset-list-style();
+    }
+
     &__item {
+        @include text-size(body-2);
         display: inline-block;
     }
 
     &__text {
-        @include text-size(body-2);
         @include link();
-
         color: var(--g-color-text-secondary);
-
-        &:after {
-            content: '\a0/ ';
-            margin: 0 8px 0 6px;
-            color: var(--g-color-text-secondary);
-        }
 
         &:hover {
             color: var(--g-color-text-primary);
         }
     }
 
+    &__separator {
+        margin: 0 8px 0 6px;
+        color: var(--g-color-text-secondary);
+    }
+
     &_theme_dark {
         #{$block}__text {
             color: var(--g-color-text-light-secondary);
 
-            &:after {
-                color: var(--g-color-text-light-secondary);
-            }
-
             &:hover {
                 color: var(--g-color-text-light-primary);
             }
+        }
+
+        #{$block}__separator {
+            color: var(--g-color-text-light-secondary);
         }
     }
 }
